rendered/envs/friclu/kube-prometheus-stack/ingress-kube-prometheus-stack-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  labels:
    app: kube-prometheus-stack-alertmanager
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 77.13.0
    chart: kube-prometheus-stack-77.13.0
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prometheus-stack-alertmanager
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - alertmanager.duchardt.net
      secretName: alertmanager-certificate
